--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 bandit==1.6.2
+Django==1.11.29; python_version < '3.0'
+Django==2.2.16; python_version >= '3.0'
 pylint==2.6.0; python_version >= '3.0'
 pylint==1.9.5; python_version < '3.0'
+requests==2.24.0
