Adding card to check if response contains an image (MMS)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ script:
   - pylint send_picture
   - pylint set_variable
   - pylint voice_message
+  - pylint response_contains_image
   - bandit -r .
