--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
           name: Build and validate
           command: |
             pip install -r requirements.txt --progress-bar off
+            python validate_manifest.py stable.json
             pylint branch
             pylint comment
             pylint game_over
@@ -55,6 +56,7 @@ jobs:
           name: Build and validate
           command: |
             pip install -r requirements.txt --progress-bar off
+            python validate_manifest.py stable.json
             pylint branch
             pylint comment
             pylint game_over
