--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   python: circleci/python@1.2
+  node: circleci/node@4.7.0
 
 workflows:
   build:
@@ -16,12 +17,18 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: venv-38-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: venv-38-{{ .Branch }}-{{ checksum "requirements.txt" }}-{{ checksum "package-lock.json" }}
+      - run:
+          name: Validate Javascript code
+          command: |
+            npm install
+            npx eslint cards
       - run:
           name: Build and validate
           command: |
             pip install -r requirements.txt --progress-bar off
             python validate_manifest.py stable.json
+
             pylint cards/branch
             pylint cards/comment
             pylint cards/game_over
@@ -42,7 +49,7 @@ jobs:
 
             bandit -r .      
       - save_cache:
-          key: venv-38-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}
+          key: venv-38-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}-{{ checksum "/home/circleci/project/package-lock.json" }}
           paths:
             - "/home/circleci/venv"
       - store_test_results:
@@ -57,7 +64,12 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: venv-27-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: venv-27-{{ .Branch }}-{{ checksum "requirements.txt" }}-{{ checksum "package-lock.json" }}
+      - run:
+          name: Validate Javascript code
+          command: |
+            npm install
+            npx eslint cards
       - run:
           name: Build and validate
           command: |
@@ -83,7 +95,7 @@ jobs:
 
             bandit -r .
       - save_cache:
-          key: venv-27-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}
+          key: venv-27-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}-{{ checksum "/home/circleci/project/package-lock.json" }}
           paths:
             - "/home/circleci/venv"
       - store_test_results:
