--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 arrow==0.14.7; python_version < '3.0'
-arrow==1.1.1; python_version >= '3.0'
-bandit==1.6.2
-Django==1.11.29; python_version < '3.0'
-Django==2.2.24; python_version >= '3.0'
-pylint==2.6.0; python_version >= '3.0'
+arrow==1.2.0; python_version >= '3.0'
+bandit==1.7.0; python_version >= '3.0'
+bandit==1.6.2; python_version < '3.0'
+pylint==2.11.1; python_version >= '3.0'
 pylint==1.9.5; python_version < '3.0'
-requests==2.24.0
+requests==2.26.0
