--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             pylint data_processors/openweather
             pylint data_processors/wmata
 
-            bandit -r .      
+            bandit -r . -x ./node_modules/
       - save_cache:
           key: venv-38-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}-{{ checksum "/home/circleci/project/package-lock.json" }}
           paths:
@@ -95,7 +95,7 @@ jobs:
             pylint data_processors/openweather
             pylint data_processors/wmata
 
-            bandit -r .
+            bandit -r . -x ./node_modules/
       - save_cache:
           key: venv-27-{{ .Branch }}-{{ checksum "/home/circleci/project/requirements.txt" }}-{{ checksum "/home/circleci/project/package-lock.json" }}
           paths:
