--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 arrow==0.14.7; python_version < '3.0'
-arrow==1.2.0; python_version >= '3.0'
-bandit==1.7.0; python_version >= '3.0'
+arrow==1.2.3; python_version >= '3.0'
+bandit==1.7.4; python_version >= '3.0'
 bandit==1.6.2; python_version < '3.0'
 Django==1.11.29; python_version < '3.0'
-Django==3.2.7; python_version >= '3.0'
-pylint==2.11.1; python_version >= '3.0'
+Django==3.2.15; python_version >= '3.0'
+pylint==2.15.0; python_version >= '3.7.2'
+pylint==2.14.5; python_version >= '3.0' and python_version < '3.7.2'
 pylint==1.9.5; python_version < '3.0'
-requests==2.26.0
+requests==2.27.1; python_version <= '3.6'
+requests==2.28.1; python_version >= '3.7'
