--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
 {
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1"
-  },
-  "dependencies": {
-    "generator-eslint": "^3.0.1",
-    "npm": "^8.5.0",
-    "yo": "^4.3.0"
+    "eslint": "^9.1.1",
+    "@eslint/js": "^9.1.1"
   }
 }
