--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 arrow==0.14.7; python_version < '3.0'
 arrow==1.2.3; python_version >= '3.0' and python_version <= '3.7'
 arrow==1.3.0; python_version >= '3.8'
-bandit==1.7.5; python_version >= '3.7'
-bandit==1.7.1; python_version == '3.6'
 bandit==1.6.2; python_version < '3.0'
+bandit==1.7.1; python_version == '3.6'
+bandit==1.7.5; python_version == '3.7'
+bandit==1.7.9; python_version >= '3.8'
 Django==1.11.29; python_version < '3.0'
-Django==3.2.23; python_version >= '3.0'
-pylint==3.0.3; python_version >= '3.8'
-pylint==2.17.7; python_version == '3.7'
-pylint==2.13.9; python_version == '3.6'
+Django==3.2.25; python_version >= '3.0' and python_version <= '3.7'
+Django==4.2.14; python_version >= '3.8'
 pylint==1.9.5; python_version < '3.0'
+pylint==2.13.9; python_version == '3.6'
+pylint==2.17.7; python_version == '3.7'
+pylint==3.2.5; python_version >= '3.8'
 requests==2.27.1; python_version <= '3.6'
-requests==2.31.0; python_version >= '3.7'
+requests==2.31.0; python_version == '3.7'
+requests==2.32.3; python_version >= '3.8'
